@@ -1,6 +1,10 @@
 local Handler = {}
 
 script.on_init(function()
+  storage.surface = game.planets["greedy-inserter"].create_surface()
+  storage.surface.generate_with_lab_tiles = true
+  storage.surface.create_global_electric_network()
+
   storage.structs = {}
   storage.deathrattles = {}
 
