@@ -1,2 +1,3 @@
 require("prototypes.inserter")
 require("prototypes.hidden")
+require("prototypes.surface")
