@@ -15,3 +15,6 @@ greedy-inserter--fuel=Compilatron
 
 [fuel-category-name]
 greedy-inserter--fuel-category=compilatrons
+
+[space-location-name]
+greedy-inserter=Greedy inserter
