@@ -1,0 +1,10 @@
+data:extend{{
+  type = "planet",
+  name = "greedy-inserter",
+  icon = "__greedy-inserter__/graphics/icons/greedy-inserter.png",
+
+  distance = 0,
+  orientation = 0,
+
+  hidden = true,
+}}
